--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css"/>
-        <title>JS 7 Days - Desenhando com Canvas</title>
+        <title>JS 7 Days - Canva Attack</title>
     </head>
 
     <body>
