--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <button class="clear">Limpar Quadro</button>
 
-        <footer>Criado por <a href="https://davidkhauan.github.io/project-devlinks/">David Khauan</a></footer>
+        <footer>Criado por <a href="https://davidkhauan.github.io/project-devlinks/" target="_blank">David Khauan</a></footer>
 
         <script src="script.js"></script>
     </body>
